[package]
name = "final_project"
version = "0.1.0"

[dependencies]
mysql = "25.0.1"
rust-argon2 = "2.1"
thiserror = "1.0.44"
config = "0.13.3"
rand = "0.8.5"
proc-macro2 = "1.0.60"
pkg-config = "0.3.30"
vcpkg = "0.2.15"
cc = "1.0.79"
regex-syntax = "0.7.1"
dotenv = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"
url = "2.5.2"
